<resources>
    <string name="app_name">K</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_login_text">Login</string>
    <string name="auth_failed">Unsucessfull authentication</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name_register">Name</string>
    <string name="name_prompt_register">Name</string>
    <string name="action_register">REGISTER</string>
    <string name="title_activity_register_s2">RegisterS2Activity</string>
    <string name="add_picture">Add picture</string>
    <string name="take_picture">Take picture</string>
    <string name="action_registers2">Save</string>
    <string name="about_prompt_register">About</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="type_of_object">Type:</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="nav_logout_text">Logout</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <string name="object_name">Object name</string>
    <string name="add_object_choose_type_string">Choose type</string>
    <string name="add_object_take_pic_string">Take picture</string>
    <string name="add_object_save_string">Save</string>
    <string name="add_object_my_loc_string">My location</string>
    <string name="title_activity_connect_with_friend">ConnectWithFriendActivity</string>
    <string name="connect_with_paired_devices_string">Paired devices</string>
    <string name="connect_with_search_devices_string">Search</string>
    <string name="connect_with_friend_listen_conn_string">Listen connections</string>
    <string name="title_activity_location_tracker">LocationTrackerActivity</string>
    <string name="location_tracker_start_service_string">Start service</string>
    <string name="location_tracker_stop_service_string">Stop service</string>
    <string name="title_activity_friend_details">FriendDetailsActivity</string>
    <string name="title_activity_user_rank">UserRankActivity</string>
    <string name="radius_m_string">Radius in meters</string>
    <string name="search_place_name_string">Place name</string>
    <string name="search_place_desc_string">Place description</string>
</resources>
