<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wkyn.dzudi.kbuildv1.AddPlaceActivity"
    tools:showIn="@layout/activity_add_place">
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:scrollbars="none"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
            <EditText
                android:id="@+id/add_object_object_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/object_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_object_choose_type_string"/>
            <Spinner
                android:id="@+id/add_object_object_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <EditText
                android:id="@+id/add_object_object_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="description"/>
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/add_object_map"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                />
            <EditText
                android:id="@+id/add_object_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Longitude"/>
            <EditText
                android:id="@+id/add_object_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Latitude"/>
            <Button
                android:id="@+id/add_object_my_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_object_my_loc_string"/>
            <ImageView
                android:id="@+id/add_object_object_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/add_object_take_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_object_take_pic_string"/>
            <Button
                android:id="@+id/add_object_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_object_save_string"/>
    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
